[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rewarped"
authors = [{ name = "rewarped contributors", email = "etaoxing@users.noreply.github.com" }]
requires-python = ">=3.9"
description = ""
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "warp-lang>=1.3.3",
    "usd-core",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
GitHub = "https://github.com/etaoxing/rewarped"

[tool.setuptools]
packages = ["rewarped"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = [
    ".git",
    ".vscode",
    ".ruff_cache",
    "__pycache__",
    "docs",
    "build",
    "assets",
    "third_party",
    "rewarped/warp_mpm_sga/*",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "I",  # isort
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Many lines are over 120 characters already
    "E741",  # Warp often uses l as a variable name
    "F403",  # Allow wildcard imports
    "F405",  # Related to use of wildcard imports
    "F811",  # Warp often uses overloads
    "B007",  # Loop control variable not used within loop body
    "C408",  # Unnecessary `dict` call (rewrite as a literal)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # Module imported but unused
    "E402",  # Module level import not at top of file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["warp"]
